在庫とSKUの管理機能を強化: 複数SKUの削除メソッドを追加し、SKUの一括取得機能を実装。商品削除時に関連SKUと在庫を適切に処理するロジックを追加。